--- a/adminDb.html
+++ b/adminDb.html
@@ -83,12 +83,12 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
-                <i class="fas fa-question-circle"></i> Quizzes/Exams
+            <a class="nav-link" href="quizdb.html">
+                <i class="fas fa-question-circle"></i> Quizzes
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="users.html">
+            <a class="nav-link" href="usersTab.html">
                 <i class="fas fa-users"></i> Users
             </a>
         </li>
@@ -128,13 +128,12 @@
         <h1 class="text-center">Admin Dashboard</h1>
     </header>
 
-
     <div class="row mb-4">
         <div class="col-md-3">
             <div class="card text-center">
-                <div class="card-header">Total Quizzes and Exams</div>
+                <div class="card-header">Total Quizzes</div>
                 <div class="card-body">
-                    <h3 class="card-text">10</h3>
+                    <h3 class="card-text">5</h3>
                 </div>
             </div>
         </div>
@@ -166,7 +165,7 @@
 
     <div class="card mb-4">
         <div class="card-header">
-            <h5 class="mb-0">Recent Quizzes and Exams</h5>
+            <h5 class="mb-0">Recent Quizzes</h5>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -174,7 +173,7 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>Quiz/Exam Name</th>
+                            <th>Quiz Name</th>
                             <th>Category</th>
                             <th>Participants</th>
                             <th>Avg. Score</th>
