--- a/intro.html
+++ b/intro.html
@@ -56,7 +56,8 @@
     <div class = "container">
         <h1>Welcome to<span style="font-weight: 800; color: #ffcc00;"> <br> Q&E with EBE </span></h1>
         <a href="loginAdmin.html" class="btn">Continue as Admin</a>
-        <a href="userLogin.html" class="btn">Continue as Taker</a>
+        <a href="userLogin.html" class="btn">Continue as User</a>
     </div>
 </body>
 </html>
+ 
